clusters/west-wa-sea-2302/heartbeat/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heartbeat
  namespace: heartbeat
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "false"

spec:
  # tls:
  # - secretName: heartbeat
  #   hosts:
  #   - west-wa-sea-2302.res-edge.com
  rules:
  - host: west-wa-sea-2302.res-edge.com
    http:
      paths:
      - pathType: Prefix
        path: /heartbeat
        backend:
          service:
            name: heartbeat
            port:
              number: 8080
